<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小路</string>
    <string name="hello">Hello androidTest!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">用户名</string>
    <string name="message">请输入用户名</string>
    <string name="password">密　码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="aulog">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="checkcode">验证码</string>
    <string name="uploadIcon">上传头像</string>
    <string name="ok">OK</string>
    <string name="title_activity_datetime">DatetimeActivity</string>
    <string name="title_activity_date_time">DateTimeActivity</string>
    
    
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="image_desc">图片</string>
    
    
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>

</resources>